--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Nabajit Ghosh - Full-stack Developer specializing in React, JavaScript, and modern web development technologies. Passionate about creating responsive and innovative web solutions.">
+    <meta name="keywords" content="Nabajit Ghosh, portfolio, web developer, React developer, JavaScript, full-stack developer, responsive web design, modern web development">
+    <meta name="author" content="Nabajit Ghosh">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
