--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Nabajit Ghosh</title>
+
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1V5V59X32G"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-1V5V59X32G');
+    </script>
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
