--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Nabajit Ghosh - Full-stack Developer specializing in React, JavaScript, and modern web development technologies. Passionate about creating responsive and innovative web solutions.">
-    <meta name="keywords" content="Nabajit Ghosh, portfolio, web developer, React developer, JavaScript, full-stack developer, responsive web design, modern web development">
+    <meta name="description" content="Nabajit Ghosh — Software Developer focused on MERN stack, Python, cloud deployment, and scalable web applications. Passionate about generative AI, clean code, and real-world problem solving.">
+    <meta name="keywords" content="Nabajit Ghosh, software developer, MERN stack, React developer, JavaScript developer, Python developer, full-stack development, web development portfolio, cloud deployment, REST API, responsive web design, modern web technologies, generative AI, SDLC, DSA, OOP, backend developer">
     <meta name="author" content="Nabajit Ghosh">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
